--- a/Milestone3_code.Rmd
+++ b/Milestone3_code.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Project m3"
 author: "Xinyi Wang"
-date: "2023-05-02"
+date: "2023-05-06"
 ---
 
 ```{r setup, include=FALSE, message=FALSE}
@@ -42,38 +42,39 @@ data1 <- read.csv("https://github.com/yicenyang/stat436/raw/main/heart.csv") %>%
   rename("heart.rate" = "thalach",
          "blood.pressure" = "trestbps",
          "cholesterol" = "chol")
-model = glm(target~heart.rate + blood.pressure + cholesterol, data = data1, family = binomial(link = "logit"))
+model = glm(target ~ heart.rate + blood.pressure + cholesterol, data = data1, family = binomial(link = "logit"))
 summary(model)
 ```
 
 
 #Data overview
-#density plots
+
+#Density plots
 ```{r}
  d1 = ggplot(data, aes(x = blood.pressure)) +
      geom_density(aes(fill = as.factor(target)), alpha = 0.5)+
   labs(fill = "Disease Status", shape = "sex", x = "blood pressure")+
    scale_y_continuous(expand = c(0,0,0.001,0.001))
- d2 = ggplot(data,aes(x=cholesterol))+
+ d2 = ggplot(data,aes(x = cholesterol))+
   geom_density(aes(fill=as.factor(target)), alpha = 0.5)+
   labs(fill = "Disease Status", shape = "sex", x = "cholesterol")+
    scale_y_continuous(expand = c(0,0,0.001,0.001))
- d3 =ggplot(data,aes(x=heart.rate))+
+ d3 = ggplot(data,aes(x = heart.rate))+
   geom_density(aes(fill=as.factor(target)), alpha = 0.5)+
   labs(fill = "Disease Status", shape = "sex", x = "heart rate")+
    scale_y_continuous(expand = c(0,0,0.001,0.001))
 (d1/d2/d3) +
   plot_layout(guides = "collect") +
-  plot_annotation(theme = theme(legend.position = "right", legend.title = element_text(size = 10))) 
+  plot_annotation(theme = theme(legend.position = "right", 
+                                legend.title = element_text(size = 10))) 
 ```
 
 #scatterplots
 ```{r, fig.width = 8, fig.height = 6}
 p <- list()
 
-
-data5 = data1 %>% filter(target ==1)
-data6 = data1 %>% filter(target ==0)
+data5 = data1 %>% filter(target == 1)
+data6 = data1 %>% filter(target == 0)
 
 p[["scatter"]]  <- ggplot(data, aes(x = age, y = heart.rate)) +
   geom_point(aes(col = as.factor(target), shape = as.factor(sex))) +
@@ -102,12 +103,13 @@ p[["scatter"]]  <- ggplot(data, aes(x = age, y = heart.rate)) +
 
   p[["scatter"]]/p[["scatter2"]]/p[["scatter3"]] +
     plot_layout(guides = "collect") &
-   plot_annotation(theme = theme(legend.position = "right", legend.title = element_text(size = 15)))
+   plot_annotation(theme = theme(legend.position = "right", 
+                                 legend.title = element_text(size = 15)))
 ```
 
 #grouping age into 4 groups
 ```{r}
-data=read.csv("https://github.com/yicenyang/stat436/raw/main/heart.csv")%>% 
+data = read.csv("https://github.com/yicenyang/stat436/raw/main/heart.csv")%>% 
   rename("heart.rate" = "thalach",
          "blood.pressure" = "trestbps",
          "cholesterol" = "chol")
@@ -115,20 +117,19 @@ min(data$age)
 max(data$age)
 heart4 <- data %>% 
   mutate(sex = ifelse(sex == 1, "Male", "Female")) %>% 
-  mutate(target = ifelse(target == 1, "Disease", "No Disease"),age_range = case_when( 20<age& age<=40 ~ "20-40",
+  mutate(target = ifelse(target == 1, "Disease", "No Disease"),age_range = case_when(20 < age & age <= 40 ~ "20-40",
                                  41<=age& age<=50 ~ "40-50",
                                  51<=age& age<=60 ~ "50-60",
                                  61<=age ~ "over 60",
                                  )) 
 
-heart4 <- heart4 %>%
+heart4 = heart4 %>%
   mutate(row_index = row_number())
-data77=read.csv("https://github.com/yicenyang/stat436/raw/main/heart.csv")%>% drop_na()
+data77 = read.csv("https://github.com/yicenyang/stat436/raw/main/heart.csv")%>% drop_na()
 ```
 
 
 #function generation
-
 ```{r}
 data_table <- function(data, selected_) {
   data %>%
@@ -270,7 +271,6 @@ server1 <- function(input, output) {
 }
 
 app1 <- shinyApp(ui = ui1, server = server1)
-
 ```
 
 
@@ -349,13 +349,11 @@ data20 <- data10 %>%
 us_states <- map_data("state")
 state = read.csv("https://uwmadison.box.com/shared/static/59noryjk6oac0zlt42uhd1ktfmh9la9l.csv")
 state$City = tolower(state$City)
-#function of plot the map 
 ```
 
 #function generation
 ```{r}
 plot_choropleth <- function(filtered_data) {
-  
   state_data <- filtered_data %>%
     group_by(LocationAbbr) %>%
     summarize(value = round(mean(Data_Value, na.rm = TRUE),0))
@@ -365,8 +363,8 @@ plot_choropleth <- function(filtered_data) {
 
   ggplot(data = merged_data2, aes(x = long, y = lat, group = group, fill = value, text = paste("State:", LocationAbbr, "<br>Value:", value))) +
     geom_polygon(color = "black", size = 0.2) +
-    scale_fill_viridis_c(option = "viridis", na.value = "gray90",  # Use the Viridis color scale
-                     guide = guide_colorbar(title = "Average Death")) +  # Update the legend title
+    scale_fill_viridis_c(option = "viridis", na.value = "gray90", 
+                         guide = guide_colorbar(title = "Average Death")) + 
     labs(title = "State Average Death per 100,000 by CVD") +
     theme_minimal() +
     theme(panel.grid.major = element_blank(),
@@ -376,7 +374,6 @@ plot_choropleth <- function(filtered_data) {
           axis.title = element_blank(),
           legend.position = "right")
 }
-
 ```
 
 
@@ -426,10 +423,8 @@ server2 <- function(input, output, session) {
   state_abbr <- gsub("State: ", "", state_info[1])
   value <- gsub("Value: ", "", state_info[2])
   output$info <- renderText(paste("State:", state_abbr, " Value:", value))
-})
-
-}
+ })
+ }
 
 app2 = shinyApp(ui2, server2)
-
 ```
